force-app/main/default/objects/Operating_Budget__c/Operating_Budget__c.object-meta.xml
<CustomObject>
    <description>Used on applications, where budget input needed by applicant</description>
    <label>Operating Budget</label>
    <nameField>
        <displayFormat>OB-{00000}</displayFormat>
        <label>Operating Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>