force-app/main/default/objects/Operating_Budget__c/fields/Accounting__c.field-meta.xml
<CustomField>
    <fullName>Accounting__c</fullName>
    <label>Accounting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>