force-app/main/default/objects/Operating_Budget__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Operating Budgets</relationshipLabel>
    <relationshipName>Operating_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>