force-app/main/default/objects/Operating_Budget__c/fields/City_of_St_Louis_CDBG__c.field-meta.xml
<CustomField>
    <fullName>City_of_St_Louis_CDBG__c</fullName>
    <label>City of St. Louis CDBG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>