force-app/main/default/objects/Operating_Budget__c/fields/Consultant_and_Contract_Services__c.field-meta.xml
<CustomField>
    <fullName>Consultant_and_Contract_Services__c</fullName>
    <label>Consultant and Contract Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>