force-app/main/default/objects/Operating_Budget__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Operating Budgets</relationshipLabel>
    <relationshipName>Operating_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>