force-app/main/default/objects/Operating_Budget__c/fields/Corporate_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Contributions__c</fullName>
    <label>Corporate Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>