force-app/main/default/objects/Operating_Budget__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>