force-app/main/default/objects/Operating_Budget__c/fields/Endowments__c.field-meta.xml
<CustomField>
    <fullName>Endowments__c</fullName>
    <label>Endowments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>