force-app/main/default/objects/Operating_Budget__c/fields/EXCESS_REVENUE_LOSS_OVER_EXPENSES__c.field-meta.xml
<CustomField>
    <fullName>EXCESS_REVENUE_LOSS_OVER_EXPENSES__c</fullName>
    <formula>Total_Revenue__c -
 Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EXCESS REVENUE (LOSS) OVER EXPENSES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>