force-app/main/default/objects/Operating_Budget__c/fields/Explain_In_Kind_amount__c.field-meta.xml
<CustomField>
    <fullName>Explain_In_Kind_amount__c</fullName>
    <label>Explain In-Kind amount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>