force-app/main/default/objects/Operating_Budget__c/fields/FundraisersSpecial_Events__c.field-meta.xml
<CustomField>
    <fullName>FundraisersSpecial_Events__c</fullName>
    <label>Fundraisers/Special Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>