force-app/main/default/objects/Operating_Budget__c/fields/in_Kind_Expenses__c.field-meta.xml
<CustomField>
    <fullName>in_Kind_Expenses__c</fullName>
    <label>in-Kind Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>