force-app/main/default/objects/Operating_Budget__c/fields/In_Kind_Income__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Income__c</fullName>
    <label>In-Kind Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>