force-app/main/default/objects/Operating_Budget__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <label>Legal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>