force-app/main/default/objects/Operating_Budget__c/fields/Office_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Office_Supplies__c</fullName>
    <label>Office Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>