force-app/main/default/objects/Operating_Budget__c/fields/Other_1_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_1_Revenue__c</fullName>
    <label>Other 1 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>