force-app/main/default/objects/Operating_Budget__c/fields/Other_2_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_2_Expense__c</fullName>
    <label>Other 2 Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>