force-app/main/default/objects/Operating_Budget__c/fields/Other_Apprentice_Wages_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_Apprentice_Wages_Expense__c</fullName>
    <label>Other: Apprentice Wages Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>