force-app/main/default/objects/Operating_Budget__c/fields/Other_Apprentices_Wages_Taxes_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Other_Apprentices_Wages_Taxes_Benefits__c</fullName>
    <label>Other:Apprentices Wages, Taxes, Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>