force-app/main/default/objects/Operating_Budget__c/fields/Other_Federal_Grants__c.field-meta.xml
<CustomField>
    <fullName>Other_Federal_Grants__c</fullName>
    <label>Other Federal Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>