force-app/main/default/objects/Operating_Budget__c/fields/Other_Outside_Computer_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Outside_Computer_Services__c</fullName>
    <label>Other: Outside Computer Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>