force-app/main/default/objects/Operating_Budget__c/fields/Parent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Parent_Budget__c</fullName>
    <label>Parent Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>