force-app/main/default/objects/Operating_Budget__c/fields/Payroll_Taxes_and_Fringe_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Taxes_and_Fringe_Benefits__c</fullName>
    <label>Payroll Taxes and Fringe Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>