force-app/main/default/objects/Operating_Budget__c/fields/Personel_Salaries_and_Wages__c.field-meta.xml
<CustomField>
    <fullName>Personel_Salaries_and_Wages__c</fullName>
    <label>Personel Salaries and Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>