force-app/main/default/objects/Operating_Budget__c/fields/Postage__c.field-meta.xml
<CustomField>
    <fullName>Postage__c</fullName>
    <label>Postage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>