force-app/main/default/objects/Operating_Budget__c/fields/Printing_and_Copying__c.field-meta.xml
<CustomField>
    <fullName>Printing_and_Copying__c</fullName>
    <label>Printing and Copying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>