force-app/main/default/objects/Operating_Budget__c/fields/RentLeaseMortgage__c.field-meta.xml
<CustomField>
    <fullName>RentLeaseMortgage__c</fullName>
    <label>Rent/Lease/Mortgage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>