force-app/main/default/objects/Operating_Budget__c/fields/State_Grants__c.field-meta.xml
<CustomField>
    <fullName>State_Grants__c</fullName>
    <label>State Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>