force-app/main/default/objects/Operating_Budget__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>