force-app/main/default/objects/Operating_Budget__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Personel_Salaries_and_Wages__c +
Payroll_Taxes_and_Fringe_Benefits__c +
RentLeaseMortgage__c +
Utilities__c +
Telephone__c +
Office_Supplies__c +
Postage__c +
Printing_and_Copying__c +
Travel__c + Insurance__c +
Consultant_and_Contract_Services__c +
Legal__c +
Accounting__c +
in_Kind_Expenses__c +
Other_Expenses__c +  
Other_1_Expense__c  +  
Other_2_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>