force-app/main/default/objects/Operating_Budget__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>FundraisersSpecial_Events__c+

City_of_St_Louis_CDBG__c +
Corporate_Contributions__c +
Endowments__c +
Interest_Income__c +
Investment_Income__c +
Other__c +
Other_Federal_Grants__c +
State_Grants__c +
In_Kind_Income__c +
Fee_Revenue__c +  
Other_1_Revenue__c  + 
Other_2_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>