force-app/main/default/objects/Operating_Budget__c/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <label>Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>