force-app/main/default/objects/Operating_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accounting__c</columns>
    <columns>Budget_Name__c</columns>
    <columns>City_of_St_Louis_CDBG__c</columns>
    <columns>Consultant_and_Contract_Services__c</columns>
    <columns>Corporate_Contributions__c</columns>
    <columns>Endowments__c</columns>
    <columns>Fee_Revenue__c</columns>
    <columns>Application__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>